// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders additional className 1`] = `
<button
  className="button additional"
>
  <span
    className="text"
  >
    any
  </span>
</button>
`;

exports[`Button renders children content properly 1`] = `
<button
  className="button"
>
  Text
</button>
`;

exports[`Button renders label text 1`] = `
<button
  className="button"
>
  <span
    className="text"
  >
    Text
  </span>
</button>
`;
